--- a/style.css
+++ b/style.css
@@ -1,39 +1,50 @@
-body{
-    background-color:rgb(48, 48, 48);
-    color: rgb(239, 235, 228);
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body {
+  background-color: rgb(48, 48, 48);
+  color: rgb(239, 235, 228);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-header{
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns:33vw ;
-    color: rgb(239, 235, 228);
+header {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 33vw;
+  color: rgb(239, 235, 228);
 }
 
-section{
-    background-color:rgb(239, 235, 228);
-    color: rgb(48, 48, 48);
-    padding: 10px;
-    border-radius: 20px;
-    width: 50%;
-    margin: auto;
+section {
+  background-color: rgb(239, 235, 228);
+  color: rgb(48, 48, 48);
+  padding: 10px;
+  border-radius: 20px;
+  width: 50%;
+  margin: auto;
 }
 
-#botao{
-    background-color:rgb(12, 112, 242);
-    border: 0;
-    color: rgb(239, 235, 228);
-    width: 150px;
-    height: 30px;
-    border-radius: 10px;
+#botao {
+  background-color: rgb(12, 112, 242);
+  border: 0;
+  color: rgb(239, 235, 228);
+  width: 150px;
+  height: 30px;
+  border-radius: 10px;
 }
 
-.form{
-    border: 0;
-    margin: 8px;
-    border-radius: 10px;
-    height: 25px;
-    width: 215px;
+.form {
+  border: 0;
+  margin: 8px;
+  border-radius: 10px;
+  height: 25px;
+  width: 215px;
+}
+
+input {
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+@media only screen and (max-width: 435px) {
+  .form {
+    width: 190px;
+  }
 }
